--- a/main.html
+++ b/main.html
@@ -3,10 +3,87 @@
 <html>
 
 <head>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
+	<div class="container">
+		<div class="row">
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1"  class="img1">
+			</div>
+			<div class="col-1">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="image1" class="img1">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-2">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img2" class="img2">
+			</div>
+			<div class="col-2">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img2" class="img2">
+			</div>
+			<div class="col-2">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img2" class="img2">
+			</div>
+			<div class="col-2">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img2" class="img2">
+			</div>
+			<div class="col-2">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img2" class="img2">
+			</div>
+			<div class="col-2">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img2" class="img2">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-4">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img3" class="img3">
+			</div>
+			<div class="col-4">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img3" class="img3">
+			</div>
+			<div class="col-4">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img3" class="img3">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<img src="https://cdn.pixabay.com/photo/2015/06/22/08/40/child-817373__480.jpg" alt="img4" class="img4">
+			</div>
+		</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
